--- a/Lab04_01/App.config
+++ b/Lab04_01/App.config
@@ -18,6 +18,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="ConnectSQL_L03_03" connectionString="data source=DESKTOP-JA384NA;initial catalog=StudentManage_L03_03;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="StudentContextDB" connectionString="data source=DESKTOP-JA384NA;initial catalog=StudentManage_L04_01;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="ContextDB" connectionString="data source=DESKTOP-JA384NA;initial catalog=StudentManage_L04_01;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
